<resources>
    <string name="app_name">Bird\'s Control</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bird_details">Bird Details</string>
    <string name="bird_photo">Bird\'s Photo</string>
    <string name="race">Race</string>
    <string name="variation">Variation</string>
    <string name="ring">Ring</string>
    <string name="code">Code</string>
    <string name="birth_date">Birth date</string>
    <string name="annotations">Annotations</string>
    <string name="cage">Cage</string>
    <string name="abrv_female">F</string>
    <string name="female">Female</string>
    <string name="abrv_male">M</string>
    <string name="male">Male</string>
    <string name="abrv_undefined">U</string>
    <string name="undefined">Undefined</string>
    <string name="have_died">Have died</string>
    <string name="more_info">More info</string>
    <string name="error_loading_bird">Can\'t retrieve bird</string>
    <string-array name="genres">
        <item>@string/undefined</item>
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>


    <string name="content_authority" translatable="false">com.eamh.birdcontrol</string>
    <string name="bird_updated">Bird Updated</string>
    <string name="bird_created">Bird Created</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Photo</string>
    <string name="no_data_available">No data available</string>
</resources>
